Fixed scrolling on mobile

--- a/grayscale.css
+++ b/grayscale.css
@@ -162,7 +162,7 @@ a:focus {
 
 @media(min-width:767px) {
     .intro {
-        height: 100%;
+        height: 100vh;
         padding: 0;
     }
 
@@ -174,6 +174,22 @@ a:focus {
         font-size: 25px;
     }
 }
+
+@media(max-width:766px) {
+    .intro {
+        height: 100vh;
+        padding: 80px 0; /* Ensures spacing when mobile nav overlaps */
+    }
+
+    .intro .intro-body .brand-heading {
+        font-size: 40px;
+    }
+
+    .intro .intro-body .intro-text {
+        font-size: 18px;
+    }
+}
+
 
 .btn-circle {
     width: 70px;
